--- a/src/components/MagnetLines/MagnetLines.css
+++ b/src/components/MagnetLines/MagnetLines.css
@@ -6,8 +6,11 @@
     justify-items: center;
     align-items: center;
 
-    width: 100%;
-    height: 100%;
+    width: 100vw;
+    height: 100vh;
+    position: fixed;
+    top: 0;
+    left: 0;
 }
 
 .magnetLines-container span {
